[gd_scene load_steps=14 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://Font/m5x7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Images/soundOnWhite.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Ball4.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/Ball1.png" type="Texture" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.184314, 0.184314, 0.184314, 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0196078, 0.0196078, 0.0901961, 1 )

[node name="BG2" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.368627, 0.101961, 0.341176, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 100 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 6 )
text = "START"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -60.0
margin_top = 5.0
margin_right = -6.0
margin_bottom = 43.0
pressed = true
icon = ExtResource( 3 )
flat = true
clip_text = true
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_top = 1.0
margin_right = 40.0
margin_bottom = 35.0
icon = ExtResource( 4 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credit" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.38654
margin_top = -36.6364
margin_right = 41.3865
margin_bottom = -6.63641
icon = ExtResource( 5 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialog" type="WindowDialog" parent="."]
light_mask = 1048575
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 51.2947
margin_top = 100.092
margin_right = -43.7053
margin_bottom = -63.9081
size_flags_horizontal = 3
size_flags_vertical = 3
popup_exclusive = true

[node name="TextEdit" type="TextEdit" parent="ConfirmationDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
mouse_default_cursor_shape = 16
custom_styles/read_only = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
readonly = true
virtual_keyboard_enabled = false
smooth_scrolling = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Credit" to="." method="_on_Credit_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
